Fix safari browser related layout issues

--- a/src/app/components/Senso/Senso.View.scss
+++ b/src/app/components/Senso/Senso.View.scss
@@ -5,9 +5,6 @@
 
   #action-items-menu {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     font-size: 2.5rem;
     text-align: center;
     width: 20%;
@@ -30,7 +27,6 @@
   @media screen and (max-width: 599px) {
     #action-items-menu {
       width: 36%;
-      top: calc(50% + 48px);
       #countdown {
         font-size: 2rem !important;
       }
@@ -58,12 +54,10 @@
   #senso {
     border-radius: 50%;
     padding: 32px;
-
     height: 100%;
-    width: auto;
-    aspect-ratio: 1 / 1;
-    //width: 75vh;
-    //height: 75vh;
+    width: 50%;
+    //aspect-ratio: 1 / 1;
+
     @media (orientation: portrait) {
       width: 75vw;
       height: 75vw;
